--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 // colors
 $BrandBlue: #5396B0;
@@ -33,13 +33,13 @@ h3, h4, h5, h6, p, a, ul, li, span{
 
 h1{
   color: $BrandGrey;
-  font-family: 'Gaegu', cursive;
+  font-family: 'Open Sans', cursive;
   font-weight: 700;
 }
 
 h2{
   color: $BrandGrey;
-  font-family: 'Gaegu', cursive;
+  font-family: 'Open Sans', cursive;
 }
 
 a, span{
